force-app/main/default/objects/Lead/fields/Partner_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_Order_ID__c</fullName>
    <description>The partner order ID.</description>
    <inlineHelpText>The partner order ID.</inlineHelpText>
    <label>Partner Order ID</label>
    <length>45</length>
    <type>Text</type>
</CustomField>