force-app/main/default/objects/Lead/fields/Partner_Package_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Partner_Package_Purchased__c</fullName>
    <label>Partner Package Purchased</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Economy</fullName>
            </value>
            <value>
                <fullName>Express Gold</fullName>
            </value>
            <value>
                <fullName>Starter</fullName>
            </value>
            <value>
                <fullName>Pro</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>