force-app/main/default/objects/Lead/fields/Partner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Partner_Phone__c</fullName>
    <label>Partner Phone</label>
    <type>Phone</type>
</CustomField>