force-app/main/default/objects/Lead/fields/Personal_Income__c.field-meta.xml
<CustomField>
    <fullName>Personal_Income__c</fullName>
    <label>Personal Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency_Tax_Savings</valueSetName>
    </valueSet>
</CustomField>