force-app/main/default/objects/Lead/fields/Pilot_Group__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Group__c</fullName>
    <label>Pilot Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pilot Group 1</fullName>
            </value>
            <value>
                <fullName>Pilot Group 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>