force-app/main/default/objects/Lead/fields/Pitched__c.field-meta.xml
<CustomField>
    <fullName>Pitched__c</fullName>
    <description>to track who pitched a client</description>
    <label>Consulted by</label>
    <length>100</length>
    <type>Text</type>
</CustomField>