force-app/main/default/objects/Lead/fields/Pitched_by_Manager__c.field-meta.xml
<CustomField>
    <fullName>Pitched_by_Manager__c</fullName>
    <label>Consulted by Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>