force-app/main/default/objects/Lead/fields/Pitched_Date__c.field-meta.xml
<CustomField>
    <fullName>Pitched_Date__c</fullName>
    <description>To track date/time of pitch</description>
    <label>Consulted Date</label>
    <type>DateTime</type>
</CustomField>