force-app/main/default/objects/Lead/fields/Pitched_Finance__c.field-meta.xml
<CustomField>
    <fullName>Pitched_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pitched CAP</label>
    <type>Checkbox</type>
</CustomField>