force-app/main/default/objects/Lead/fields/Portal_Trial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Portal_Trial_Start_Date__c</fullName>
    <description>The date a client&apos;s portal trial begins.</description>
    <label>Portal Trial Start Date</label>
    <type>Date</type>
</CustomField>