force-app/main/default/objects/Lead/fields/Pre_TSA_Link__c.field-meta.xml
<CustomField>
    <fullName>Pre_TSA_Link__c</fullName>
    <label>Tax Savings Calculator Link</label>
    <type>Url</type>
</CustomField>