force-app/main/default/objects/Lead/fields/Primary_Activity__c.field-meta.xml
<CustomField>
    <fullName>Primary_Activity__c</fullName>
    <label>Primary Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>