force-app/main/default/objects/Lead/fields/Reason_for_applying__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_applying__c</fullName>
    <label>Reason for applying</label>
    <length>255</length>
    <type>Text</type>
</CustomField>