force-app/main/default/objects/Lead/fields/Reason_To_Be_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Reason_To_Be_Contacted__c</fullName>
    <label>Reason To Be Contacted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deductibility Question</fullName>
            </value>
            <value>
                <fullName>How to Pay Employees</fullName>
            </value>
            <value>
                <fullName>Received Tax Related Notice</fullName>
            </value>
            <value>
                <fullName>Tax Question</fullName>
            </value>
            <value>
                <fullName>Tax Classification Inquiry</fullName>
            </value>
            <value>
                <fullName>Tax Cuts &amp; Jobs Act</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>