force-app/main/default/objects/Lead/fields/Recent_Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Recent_Appointment_Date__c</fullName>
    <label>Recent Appointment Date</label>
    <type>Date</type>
</CustomField>