force-app/main/default/objects/Lead/fields/Recent_Appointment_Setter__c.field-meta.xml
<CustomField>
    <fullName>Recent_Appointment_Setter__c</fullName>
    <label>Recent Appointment Setter</label>
    <length>64</length>
    <type>Text</type>
</CustomField>