force-app/main/default/objects/Lead/fields/Referring_Agent_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Referring_Agent_s_Name__c</fullName>
    <label>Referring Agent&apos;s Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>