force-app/main/default/objects/Lead/fields/Reg_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Reg_Agent_Name__c</fullName>
    <label>Reg Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>