force-app/main/default/objects/Lead/fields/Registered_Agent__c.field-meta.xml
<CustomField>
    <fullName>Registered_Agent__c</fullName>
    <label>Registered Agent</label>
    <length>64</length>
    <type>Text</type>
</CustomField>