force-app/main/default/objects/Lead/fields/Registration_Question_10__c.field-meta.xml
<CustomField>
    <fullName>Registration_Question_10__c</fullName>
    <label>Registration Question 10</label>
    <length>100</length>
    <type>Text</type>
</CustomField>