force-app/main/default/objects/Lead/fields/Registration_Question_1__c.field-meta.xml
<CustomField>
    <fullName>Registration_Question_1__c</fullName>
    <label>Registration Question 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>