force-app/main/default/objects/Lead/fields/Registration_Question_2__c.field-meta.xml
<CustomField>
    <fullName>Registration_Question_2__c</fullName>
    <label>Registration Question 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>