force-app/main/default/objects/Lead/fields/Remote_SDR_Date__c.field-meta.xml
<CustomField>
    <fullName>Remote_SDR_Date__c</fullName>
    <label>Remote SDR Date</label>
    <type>Date</type>
</CustomField>