force-app/main/default/objects/Lead/fields/Retirement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Retirement_Amount__c</fullName>
    <label>Retirement Amount</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$0 - $50,000</fullName>
            </value>
            <value>
                <fullName>$50,000-$250,000</fullName>
                <label>$50,000 - $250,000</label>
            </value>
            <value>
                <fullName>$250,000-$1M</fullName>
            </value>
            <value>
                <fullName>$1M +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>