force-app/main/default/objects/Lead/fields/Round_Robin_Corp__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Corp__c</fullName>
    <formula>MOD(VALUE(Lead_Number__c) ,5) +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round Robin Corp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>