force-app/main/default/objects/Lead/fields/RR_Lead__c.field-meta.xml
<CustomField>
    <fullName>RR_Lead__c</fullName>
    <description>Round Robin for the Digital Marketing Leads</description>
    <formula>IF(Owner:Queue.QueueName = &quot;Online Marketing&quot;, MOD(VALUE(Lead_Number__c) ,4) +1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Round Robin for the Digital Marketing Leads</inlineHelpText>
    <label>RR Lead</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>