force-app/main/default/objects/Lead/fields/RT_Use_2__c.field-meta.xml
<CustomField>
    <fullName>RT_Use_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RT Use 2</label>
    <type>Checkbox</type>
</CustomField>