force-app/main/default/objects/Lead/fields/Sales_Rep_STW__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_STW__c</fullName>
    <label>Sales Rep STW</label>
    <length>100</length>
    <type>Text</type>
</CustomField>