force-app/main/default/objects/Lead/fields/Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team__c</fullName>
    <formula>TEXT(Owner:User.Sales_Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Team</label>
    <type>Text</type>
</CustomField>