force-app/main/default/objects/Lead/fields/Sam_s_Club_Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Sam_s_Club_Membership_Number__c</fullName>
    <label>Sam&apos;s Club Membership Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>