force-app/main/default/objects/Lead/fields/Sam_s_Club_Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Sam_s_Club_Membership_Type__c</fullName>
    <label>Sam&apos;s Club Membership Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Member Standard</fullName>
            </value>
            <value>
                <fullName>Business Member Plus</fullName>
            </value>
            <value>
                <fullName>Savings Member Standard</fullName>
            </value>
            <value>
                <fullName>Savings Member Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>