force-app/main/default/objects/Lead/fields/Sam_s_Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Sam_s_Promo_Code__c</fullName>
    <label>Sam&apos;s Promo Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>