force-app/main/default/objects/Lead/fields/Scheduled_a_1_1__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_a_1_1__c</fullName>
    <formula>if( isnull(X1_1_Scheduled__c),FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled a 1-1?</label>
    <type>Checkbox</type>
</CustomField>