force-app/main/default/objects/Lead/fields/Send_SMS__c.field-meta.xml
<CustomField>
    <fullName>Send_SMS__c</fullName>
    <label>Send SMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TSA Invite</fullName>
            </value>
            <value>
                <fullName>Tax Season</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>