force-app/main/default/objects/Lead/fields/Settlement_Officer__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Officer__c</fullName>
    <description>For use with Community Tax leads only</description>
    <inlineHelpText>For use with Community Tax leads only</inlineHelpText>
    <label>Settlement Officer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>