force-app/main/default/objects/Lead/fields/SMS_for_CB_Appts__c.field-meta.xml
<CustomField>
    <fullName>SMS_for_CB_Appts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS for CB Appts</label>
    <type>Checkbox</type>
</CustomField>