force-app/main/default/objects/Lead/fields/SMS_for_Entity_Appts__c.field-meta.xml
<CustomField>
    <fullName>SMS_for_Entity_Appts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox to trigger SMS messages for Entity Formation appointments</description>
    <label>SMS for Entity Appts</label>
    <type>Checkbox</type>
</CustomField>