force-app/main/default/objects/Lead/fields/SMS_last_sent_date__c.field-meta.xml
<CustomField>
    <fullName>SMS_last_sent_date__c</fullName>
    <label>SMS last sent date</label>
    <type>Date</type>
</CustomField>