force-app/main/default/objects/Lead/fields/Sold_by__c.field-meta.xml
<CustomField>
    <fullName>Sold_by__c</fullName>
    <formula>Owner:User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold by</label>
    <type>Text</type>
</CustomField>