force-app/main/default/objects/Lead/fields/Spanish_Speaking__c.field-meta.xml
<CustomField>
    <fullName>Spanish_Speaking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Spanish is their first language and they prefer to work with a Spanish speaker</description>
    <inlineHelpText>If Spanish is their first language and they prefer to work with a Spanish speaker</inlineHelpText>
    <label>Spanish Speaking</label>
    <type>Checkbox</type>
</CustomField>