force-app/main/default/objects/Lead/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <label>Speaker</label>
    <length>100</length>
    <type>Text</type>
</CustomField>