force-app/main/default/objects/Lead/fields/State_of_Orgin__c.field-meta.xml
<CustomField>
    <fullName>State_of_Orgin__c</fullName>
    <label>State of Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>