force-app/main/default/objects/Lead/fields/Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status__c</fullName>
    <label>Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sync</fullName>
                <default>true</default>
                <label>Sync</label>
            </value>
            <value>
                <fullName>Don&apos;t Sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>