force-app/main/default/objects/Lead/fields/Sync_to_Marketo__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_Marketo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marker for Marketo to Sync records</description>
    <inlineHelpText>Value must be &quot;True&quot; to be synced to Marketo</inlineHelpText>
    <label>Sync to Marketo</label>
    <type>Checkbox</type>
</CustomField>