force-app/main/default/objects/Lead/fields/Tasks_Exported_Lead__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Exported_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tasks Exported (Lead)</label>
    <type>Checkbox</type>
</CustomField>