force-app/main/default/objects/Lead/fields/Tax_Practitioner__c.field-meta.xml
<CustomField>
    <fullName>Tax_Practitioner__c</fullName>
    <description>for Community Tax lead source</description>
    <inlineHelpText>Used only for Community Tax lead source</inlineHelpText>
    <label>Tax Practitioner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>