force-app/main/default/objects/Lead/fields/Three_Pay_Orders__c.field-meta.xml
<CustomField>
    <fullName>Three_Pay_Orders__c</fullName>
    <label>Three Pay Orders</label>
    <length>100</length>
    <type>Text</type>
</CustomField>