force-app/main/default/objects/Lead/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <formula>if( Calculated_Timezone__c &lt;&gt;null,Calculated_Timezone__c,(
IF(CASE(UPPER(State), &apos;AZ&apos;, 1, &apos;CA&apos;, 1, &apos;NV&apos;, 1,&apos;OR&apos;, 1, &apos;WA&apos;, 1, 0) &gt;=1, &quot;Pacific&quot;, null)+
IF(CASE(UPPER(State), &apos;CO&apos;, 1,&apos;ID&apos;, 1, &apos;MT&apos;, 1, &apos;NM&apos;, 1, &apos;UT&apos;, 1, &apos;WY&apos;, 1, 0) &gt;= 1, &quot;Mountain&quot;, null)+
IF(CASE(UPPER(State), &apos;AL&apos;, 1, &apos;AR&apos;, 1, &apos;IL&apos;, 1, &apos;IA&apos;, 1,&apos;KS&apos;, 1, &apos;KY&apos;,1,&apos;LA&apos;, 1,&apos;MN&apos;, 1,&apos;MS&apos;, 1,&apos;MO&apos;, 1,&apos;NE&apos;, 1, &apos;TX&apos;,1, &apos;ND&apos;, 1, &apos;OK&apos;, 1,&apos;SD&apos;, 1,&apos;WI&apos;, 1, 0) &gt;= 1, &quot;Central&quot;, null)+
IF(CASE(UPPER(State), &apos;CT&apos;, 1, &apos;DE&apos;, 1, &apos;FL&apos;,1, &apos;GA&apos;, 1, &apos;IN&apos;,1, &apos;ME&apos;, 1, &apos;MD&apos;, 1, &apos;MA&apos;, 1,&apos;MI&apos;, 1, &apos;NH&apos;, 1, &apos;NJ&apos;, 1, &apos;NY&apos;, 1, &apos;NC&apos;, 1, &apos;OH&apos;, 1, &apos;PA&apos;, 1, &apos;RI&apos;, 1, &apos;SC&apos;, 1,&apos;TN&apos;,1, &apos;VT&apos;, 1, &apos;VA&apos;, 1, &apos;WV&apos;, 1, 0) &gt;= 1,&quot;Eastern&quot;, null)+
IF(CASE(UPPER(State), &apos;AK&apos;, 1, 0) &gt;=1, &quot;Alaskan&quot;, null)+
IF(CASE(UPPER(State), &apos;HI&apos;, 1, 0) &gt;=1, &quot;Hawaiian&quot;, null)+
IF(CASE( State_of_Formation__c , &apos;Arizona&apos;, 1, &apos;AZ&apos;,1, &apos;California&apos;, 1, &apos;CA&apos;,1, &apos;Nevada&apos;, 1, &apos;NV&apos;,1, &apos;Oregon&apos;, 1, &apos;OR&apos;,1, &apos;Washington&apos;,1, &apos;WA&apos;,1,0) &gt;=1, &quot;Pacific&quot;,null)+
IF(CASE(State_of_Formation__c , &apos;Colorado&apos;, 1, &apos;CO&apos;,1, &apos;Idaho&apos;, 1, &apos;ID&apos;,1,  &apos;Montana&apos;, 1, &apos;MT&apos;,1,  &apos;New Mexico&apos;, 1, &apos;NM&apos;,1,  &apos;Utah&apos;, 1, &apos;UT&apos;,1,  &apos;Wyoming&apos;, 1, &apos;WY&apos;,1,  0) &gt;= 1, &quot;Mountain&quot;, null)+
IF(CASE(State_of_Formation__c , &apos;Alabama&apos;, 1, &apos;AL&apos;,1,  &apos;Arkansas&apos;, 1, &apos;AR&apos;,1,  &apos;Illinois&apos;, 1, &apos;IL&apos;,1,  &apos;Iowa&apos;, 1, &apos;IA&apos;,1, &apos;Kansas&apos;, 1, &apos;KS&apos;,1,  &apos;Kentucky&apos;,1, &apos;KY&apos;,1, &apos;Louisiana&apos;, 1, &apos;LA&apos;,1, &apos;Minnesota&apos;, 1, &apos;MN&apos;,1, &apos;Mississippi&apos;, 1, &apos;MS&apos;,1, &apos;Missouri&apos;, 1, &apos;MO&apos;,1, &apos;Nebraska&apos;, 1, &apos;NE&apos;,1,  &apos;Texas&apos;,1, &apos;TX&apos;,1,  &apos;North Dakota&apos;, 1,  &apos;ND&apos;,1, &apos;Oklahoma&apos;, 1, &apos;OK&apos;,1, &apos;South Dakota&apos;, 1, &apos;SD&apos;,1, &apos;Wisconsin&apos;, 1, &apos;WI&apos;,1,  0) &gt;= 1, &quot;Central&quot;, null)+
IF(CASE(State_of_Formation__c ,  &apos;Connecticut&apos;, 1, &apos;CT&apos;,1,  &apos;Delaware&apos;, 1, &apos;DE&apos;,1,  &apos;Florida&apos;,1, &apos;FL&apos;,1,  &apos;Georgia&apos;, 1, &apos;GA&apos;,1,  &apos;Indiana&apos;,1, &apos;IN&apos;,1,  &apos;Maine&apos;, 1, &apos;ME&apos;,1,  &apos;Maryland&apos;, 1, &apos;MD&apos;,1,  &apos;Massachusetts&apos;, 1, &apos;MA&apos;,1, &apos;Michigan&apos;, 1, &apos;MI&apos;,1,  &apos;New Hampshire&apos;, 1, &apos;NH&apos;,1,  &apos;New Jersey&apos;, 1, &apos;NJ&apos;,1,  &apos;New York&apos;, 1, &apos;NY&apos;,1,  &apos;North Carolina&apos;, 1, &apos;NC&apos;,1,  &apos;Ohio&apos;, 1, &apos;OH&apos;,1,  &apos;Pennsylvania&apos;, 1, &apos;PA&apos;,1,  &apos;Rhode Island&apos;, 1, &apos;RI&apos;,1,  &apos;South Carolina&apos;, 1, &apos;SC&apos;,1, &apos;Tennessee&apos;,1, &apos;TN&apos;,1,  &apos;Vermont&apos;, 1, &apos;VT&apos;,1,  &apos;Virginia&apos;, 1, &apos;VA&apos;,1,  &apos;West Virginia&apos;, 1, &apos;WV&apos;,1,  0) &gt;= 1,&quot;Eastern&quot;, null)+
IF(CASE(State_of_Formation__c, &apos;Alaska&apos;, 1, &apos;AK&apos;,1,  0) &gt;=1, &quot;Alaskan&quot;, null)+
IF(CASE(State_of_Formation__c, &apos;Hawaii&apos;, 1, &apos;HI&apos;,1,  0) &gt;=1, &quot;Hawaiian&quot;, null)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Zone</label>
    <type>Text</type>
</CustomField>