force-app/main/default/objects/Lead/fields/Tracking_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Lead_Source__c</fullName>
    <description>To track changes to the Lead Source field</description>
    <inlineHelpText>To track changes to the Lead Source field</inlineHelpText>
    <label>Tracking Lead Source</label>
    <length>25</length>
    <type>Text</type>
</CustomField>