force-app/main/default/objects/Lead/fields/Transfer_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer Eligible?</label>
    <type>Checkbox</type>
</CustomField>