force-app/main/default/objects/Lead/fields/Trustee_title__c.field-meta.xml
<CustomField>
    <fullName>Trustee_title__c</fullName>
    <label>Trustee title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>