force-app/main/default/objects/Lead/fields/Trusts_Estates__c.field-meta.xml
<CustomField>
    <fullName>Trusts_Estates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trusts &amp; Estates</label>
    <type>Checkbox</type>
</CustomField>