force-app/main/default/objects/Lead/fields/TSA_SMS__c.field-meta.xml
<CustomField>
    <fullName>TSA_SMS__c</fullName>
    <label>TSA SMS</label>
    <type>Date</type>
</CustomField>