force-app/main/default/objects/Lead/fields/UTM_Source_backend__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source_backend__c</fullName>
    <description>The UTM Source field used for backend syncing with Invoca and other tools</description>
    <label>UTM Source (backend)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>