force-app/main/default/objects/Lead/fields/UTM_Term_backend__c.field-meta.xml
<CustomField>
    <fullName>UTM_Term_backend__c</fullName>
    <description>The UTM Term field used for backend syncing with Invoca and other tools</description>
    <label>UTM Term (backend)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>