force-app/main/default/objects/Lead/fields/Vendor_Product__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Product__c</fullName>
    <label>Vendor Product</label>
    <length>64</length>
    <type>Text</type>
</CustomField>