force-app/main/default/objects/Lead/fields/Vonage_Call_Back_Time__c.field-meta.xml
<CustomField>
    <fullName>Vonage_Call_Back_Time__c</fullName>
    <description>Contains the date/time the Account, Case, or Lead should be considered for dial lists.</description>
    <label>Vonage Call Back Time</label>
    <type>DateTime</type>
</CustomField>