force-app/main/default/objects/Lead/fields/Vonage_Cancel_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Vonage_Cancel_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vonage Cancel Workflow</label>
    <type>Checkbox</type>
</CustomField>