force-app/main/default/objects/Lead/fields/Vonage_Dialer_Call_Count__c.field-meta.xml
<CustomField>
    <fullName>Vonage_Dialer_Call_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is incremented by 1 for each dialer task created.</description>
    <label>Vonage Dialer Call Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>