force-app/main/default/objects/Lead/fields/Vonage_Dialer_List_Name__c.field-meta.xml
<CustomField>
    <fullName>Vonage_Dialer_List_Name__c</fullName>
    <description>Text field to determine the next call time</description>
    <label>Vonage Dialer List Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>