force-app/main/default/objects/Lead/fields/Vonage_Hidden_Dialer_Call_Count__c.field-meta.xml
<CustomField>
    <fullName>Vonage_Hidden_Dialer_Call_Count__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox to trigger a workflow which increments the field “Vonage dialer call count”</description>
    <label>Vonage Hidden Dialer Call Count</label>
    <type>Checkbox</type>
</CustomField>